[project]
name = "toru"
version = "0.1.0"
description = "toru"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = [ "nonebot_plugin_jrrp2",
            "nonebot_plugin_memes_api",
            "nonebot_plugin_skland_arksign",
            #"nonebot_bison"
            ]
plugin_dirs = []
builtin_plugins = ["echo"]

[tool.poetry]
name = "toru"
version = "0.1.0"
description = "a chat bot"
authors = ["UKMeng <ukmengse@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nonebot-adapter-onebot = "^2.4.2"
nonebot2 = {extras = ["fastapi", "httpx", "websockets"], version = "^2.2.1"}
nonebot-plugin-jrrp2 = "^1.6"
nonebot-bison = "^0.9.1"
nonebot-plugin-memes-api = "^0.3.2"
nonebot-plugin-skland-arksign = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
